--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ buildscript {
         classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.14.0'
         /*classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10'*/
         /*classpath 'org.jetbrains.kotlin:kotlin-android-extensions:1.1.51'*/
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.6.0"
+
 
 
         // NOTE: Do not place your application dependencies here; they belong
